force-app/main/default/objects/Box__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <label>ClientId</label>
    <length>120</length>
    <type>Text</type>
</CustomField>