force-app/main/default/objects/Box__c/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <label>ClientSecret</label>
    <length>120</length>
    <type>Text</type>
</CustomField>