force-app/main/default/objects/Box__c/fields/RedirectUrl__c.field-meta.xml
<CustomField>
    <fullName>RedirectUrl__c</fullName>
    <label>RedirectUrl</label>
    <type>Url</type>
</CustomField>